--- a/Crossfit-Dashboard/index.html
+++ b/Crossfit-Dashboard/index.html
@@ -96,6 +96,8 @@
           <svg class="my-4" id="myChart" width="900" height="960" font-family="sans-serif" font-size="10" text-anchor="middle"></svg>
           <h1 class ="h2 border-bottom pb-2">Top Movement Vs Mainsite</h1>
           <div id="mytoptrends"></div>
+          <h1 class ="h2 border-bottom pb-2">Average Movements Per Wod</h1>
+          <canvas id="movements-per-wod" width="960" height="500"></canvas>
         </main>
       </div>
     </div>
@@ -121,11 +123,17 @@
     <script src="utils/utils.js"></script>
     <script src="barChart/barchart.js"></script>
     <script src="bubbleChart/BubbleChart.js"></script>
+    <script src="donutChart/DonutChart.js"></script>
     <script>
         getWodData();
         function renderGraphs(filteredData, filteredMainsiteData){
             new BarChart(getTopMovements(filteredData,filteredMainsiteData));
             new BubbleChart(filteredData);
+            let foo = [{"source": "myData", "average": 2.15},
+                        {"source": "mainsite", "average": 3},
+                        {"source": "foo", "average": 13},
+                        {"source": "bar", "average": 30}];
+            new DonutChart(foo);
         }
 
         function getWodData() {
