--- a/Crossfit-Dashboard/index.html
+++ b/Crossfit-Dashboard/index.html
@@ -21,6 +21,21 @@
   <body>
     <nav class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0">
       <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="#">Workout Analysis</a>
+        <div class="dropdown mr-2">
+            <div class="btn-group">
+                <button class="btn btn-secondary dropdown-toggle" id="compare-dropdown" type="button" data-toggle="dropdown">
+                    <span data-bind="label">Compare Against..</span>&nbsp;<span class="caret"></span>
+                </button>
+                <ul class="dropdown-menu dropdown-menu-right">
+                    <li><a class="dropdown-item" tabindex="1" href="#">Mainsite</a></li>
+                    <li><a class="dropdown-item" tabindex="2" href="#">Games</a></li>
+                    <li><a class="dropdown-item" tabindex="3" href="#">Regionals</a></li>
+                    <li><a class="dropdown-item" tabindex="4" href="#">Open</a></li>
+                    <li><div class="dropdown-divider"></div></li>
+                    <li> <a class="dropdown-item" tabindex="5" href="#">Custom..</a></li>
+                </ul>
+            </div>
+        </div>
     </nav>
 
     <div class="container-fluid">
@@ -125,125 +140,140 @@
     <script src="bubbleChart/BubbleChart.js"></script>
     <script src="donutChart/DonutChart.js"></script>
     <script>
-        getWodData();
-        function renderGraphs(filteredData, filteredMainsiteData){
-            new BarChart(getTopMovements(filteredData,filteredMainsiteData));
-            new BubbleChart(filteredData);
-            let foo = [{"source": "myData", "average": 2.15},
-                        {"source": "mainsite", "average": 3},
-                        {"source": "foo", "average": 13},
-                        {"source": "bar", "average": 30}];
-            new DonutChart(foo);
-        }
+        $(document).ready(function(){
+            getWodData();
+            setupDropdown();
 
-        function getWodData() {
-            let myData,mainsiteData;
-            $.when(
-              $.ajax({
-                url: "data.json",
-                dataType: 'json',
-                success: function(data) {
-                  myData = data;
-                }
-              }),
+            function setupDropdown(){
+                $( document.body ).on( 'click', '.dropdown-menu li', function( event ) {
+                    let $target = $( event.currentTarget );
+                    $target.closest( '.btn-group' )
+                        .find( '[data-bind="label"]' ).text( $target.text() )
+                        .end()
+                        .children( '.dropdown-toggle' ).dropdown( 'toggle' );
+                    return false;
+                });
+            }
 
-              $.ajax({
-                  url: "mainsite.json",
-                  dataType: 'json',
-                  success: function (data) {
-                    mainsiteData = data;
-                  }
-              })
-            ).then(function(){
+            function renderGraphs(filteredData, filteredMainsiteData){
+                new BarChart(getTopMovements(filteredData,filteredMainsiteData));
+                new BubbleChart(filteredData);
+                let foo = [{"source": "myData", "average": 2.15},
+                            {"source": "mainsite", "average": 3},
+                            {"source": "foo", "average": 13},
+                            {"source": "bar", "average": 30}];
+                new DonutChart(foo);
+            }
+
+            function getWodData() {
+                let myData,mainsiteData;
+                $.when(
+                  $.ajax({
+                    url: "data.json",
+                    dataType: 'json',
+                    success: function(data) {
+                      myData = data;
+                    }
+                  }),
+
+                  $.ajax({
+                      url: "mainsite.json",
+                      dataType: 'json',
+                      success: function (data) {
+                        mainsiteData = data;
+                      }
+                  })
+                ).then(function(){
+                    let filteredData = filterData("all", myData, mainsiteData);
+                    filteredData[0] = addPercentageToData(filteredData[0], filteredData[1]);
+                    renderGraphs(filteredData[0], filteredData[1]);
+                    createDateToolbar(myData, mainsiteData);
+                    addClickEvents(myData, mainsiteData);
+                });
+            }
+
+            function addClickEvents(myData, mainsiteData){
+                $( "#All" ).click(function() {
+                    handleClick("all", myData, mainsiteData);
+                });
+                $( "#Warmup" ).click(function() {
+                    handleClick("warmup", myData, mainsiteData);
+                });
+                $( "#Strength" ).click(function() {
+                    handleClick("strength", myData, mainsiteData);
+                });
+                $( "#Wod" ).click(function() {
+                    handleClick("wod", myData, mainsiteData);
+                });
+                $( "#Skills" ).click(function() {
+                    handleClick("skills", myData, mainsiteData);
+                });
+                $( "#Primitives" ).click(function() {
+                    handleClick("primitive", myData, mainsiteData);
+                });
+            }
+
+            function handleClick(filter, myData, mainsiteData){
+                clearCharts();
+                let filteredData = filterData(filter, myData, mainsiteData);
+                filteredData[0] = addPercentageToData(filteredData[0], filteredData[1]);
+                renderGraphs(filteredData[0], filteredData[1]);
+            }
+
+            function clearCharts() {
+                $("#myChart").empty();
+                $("#mytoptrends").empty();
+            }
+
+            function createDateToolbar(myData, mainsiteData){
+                let fromDatePicker = $('#from-datepicker');
+                let toDatePicker = $('#to-datepicker');
+
+
+                fromDatePicker.datepicker({
+                        format: 'dd/mm/yyyy'
+                    })
+                    .on('changeDate', function() {
+                        //render graph with date range
+                        if(fromDatePicker.val() && toDatePicker.val()){
+                            let dateRangeMyData = getDataInDateRange(myData,fromDatePicker.val(),toDatePicker.val());
+                            let dateRangeMainsiteData = getDataInDateRange(mainsiteData,fromDatePicker.val(),toDatePicker.val());
+                            clearCharts();
+                            let filteredData = filterData("all", dateRangeMyData, dateRangeMainsiteData);
+                            filteredData[0] = addPercentageToData(filteredData[0], filteredData[1]);
+                            renderGraphs(filteredData[0], filteredData[1]);
+                        }
+                    });
+
+                toDatePicker.datepicker({
+                        format: 'dd/mm/yyyy'
+                    })
+                    .on('changeDate', function() {
+                        //render graph with date range
+                        if(fromDatePicker.val() && toDatePicker.val()){
+                            let dateRangeMyData = getDataInDateRange(myData,fromDatePicker.val(),toDatePicker.val());
+                            let dateRangeMainsiteData = getDataInDateRange(mainsiteData,fromDatePicker.val(),toDatePicker.val());
+                            clearCharts();
+                            let filteredData = filterData("all", dateRangeMyData, dateRangeMainsiteData);
+                            filteredData[0] = addPercentageToData(filteredData[0], filteredData[1]);
+                            renderGraphs(filteredData[0], filteredData[1]);
+                        }
+                    });
+
+                $('#clear-btn').button().click(function(){
+                    clearDates(fromDatePicker, toDatePicker, myData, mainsiteData);
+                })
+            }
+
+            function clearDates(fromDatePicker, toDatePicker, myData, mainsiteData){
+                fromDatePicker.datepicker('setDate', null);
+                toDatePicker.datepicker('setDate', null);
+                clearCharts();
                 let filteredData = filterData("all", myData, mainsiteData);
                 filteredData[0] = addPercentageToData(filteredData[0], filteredData[1]);
                 renderGraphs(filteredData[0], filteredData[1]);
-                createDateToolbar(myData, mainsiteData);
-                addClickEvents(myData, mainsiteData);
-            });
-        }
-
-        function addClickEvents(myData, mainsiteData){
-            $( "#All" ).click(function() {
-                handleClick("all", myData, mainsiteData);
-            });
-            $( "#Warmup" ).click(function() {
-                handleClick("warmup", myData, mainsiteData);
-            });
-            $( "#Strength" ).click(function() {
-                handleClick("strength", myData, mainsiteData);
-            });
-            $( "#Wod" ).click(function() {
-                handleClick("wod", myData, mainsiteData);
-            });
-            $( "#Skills" ).click(function() {
-                handleClick("skills", myData, mainsiteData);
-            });
-            $( "#Primitives" ).click(function() {
-                handleClick("primitive", myData, mainsiteData);
-            });
-        }
-
-        function handleClick(filter, myData, mainsiteData){
-            clearCharts();
-            let filteredData = filterData(filter, myData, mainsiteData);
-            filteredData[0] = addPercentageToData(filteredData[0], filteredData[1]);
-            renderGraphs(filteredData[0], filteredData[1]);
-        }
-
-        function clearCharts() {
-            $("#myChart").empty();
-            $("#mytoptrends").empty();
-        }
-
-        function createDateToolbar(myData, mainsiteData){
-            let fromDatePicker = $('#from-datepicker');
-            let toDatePicker = $('#to-datepicker');
-
-
-            fromDatePicker.datepicker({
-                    format: 'dd/mm/yyyy'
-                })
-                .on('changeDate', function() {
-                    //render graph with date range
-                    if(fromDatePicker.val() && toDatePicker.val()){
-                        let dateRangeMyData = getDataInDateRange(myData,fromDatePicker.val(),toDatePicker.val());
-                        let dateRangeMainsiteData = getDataInDateRange(mainsiteData,fromDatePicker.val(),toDatePicker.val());
-                        clearCharts();
-                        let filteredData = filterData("all", dateRangeMyData, dateRangeMainsiteData);
-                        filteredData[0] = addPercentageToData(filteredData[0], filteredData[1]);
-                        renderGraphs(filteredData[0], filteredData[1]);
-                    }
-                });
-
-            toDatePicker.datepicker({
-                    format: 'dd/mm/yyyy'
-                })
-                .on('changeDate', function() {
-                    //render graph with date range
-                    if(fromDatePicker.val() && toDatePicker.val()){
-                        let dateRangeMyData = getDataInDateRange(myData,fromDatePicker.val(),toDatePicker.val());
-                        let dateRangeMainsiteData = getDataInDateRange(mainsiteData,fromDatePicker.val(),toDatePicker.val());
-                        clearCharts();
-                        let filteredData = filterData("all", dateRangeMyData, dateRangeMainsiteData);
-                        filteredData[0] = addPercentageToData(filteredData[0], filteredData[1]);
-                        renderGraphs(filteredData[0], filteredData[1]);
-                    }
-                });
-
-            $('#clear-btn').button().click(function(){
-                clearDates(fromDatePicker, toDatePicker, myData, mainsiteData);
-            })
-        }
-
-        function clearDates(fromDatePicker, toDatePicker, myData, mainsiteData){
-            fromDatePicker.datepicker('setDate', null);
-            toDatePicker.datepicker('setDate', null);
-            clearCharts();
-            let filteredData = filterData("all", myData, mainsiteData);
-            filteredData[0] = addPercentageToData(filteredData[0], filteredData[1]);
-            renderGraphs(filteredData[0], filteredData[1]);
-        }
+            }
+        });
 
     </script>
   </body>
