show charts with insufficient data

--- a/Crossfit-Dashboard/index.html
+++ b/Crossfit-Dashboard/index.html
@@ -134,10 +134,6 @@
     <!-- Graphs -->
     <script src="https://d3js.org/d3.v4.min.js"></script>
     <script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
-    <script src="utils/utils.js"></script>
-    <script src="barChart/barchart.js"></script>
-    <script src="bubbleChart/BubbleChart.js"></script>
-    <script src="donutChart/DonutChart.js"></script>
-    <script src="main.js"></script>
+    <script src="main.js" type="module"></script>
   </body>
 </html>
